# BirdNET-Tiny-Forge

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  NOTICE  README.md  build_tflite.sh  conf.py  noxfile.py  pyproject.toml
adr/: 2024-11-26_choose-neural-net-core-framework.md  2024-11-26_choose-pipelining-framework.md  2024-11-26_choose-templating-framework.md  2024-11-29_feature-extraction-is-not-a-model.md
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_preprocessing.yml  parameters_feature_extraction.yml  parameters_model_training.yml  parameters_target_codegen.yml
docs/source/: birdnet_tiny_forge.datasets.rst  birdnet_tiny_forge.features.microspeech.rst  birdnet_tiny_forge.features.rst  birdnet_tiny_forge.hypersearch.rst  birdnet_tiny_forge.models.rst  birdnet_tiny_forge.pipelines.data_preprocessing.rst  birdnet_tiny_forge.pipelines.feature_extraction.rst  birdnet_tiny_forge.pipelines.model_training.rst  birdnet_tiny_forge.pipelines.rst  birdnet_tiny_forge.pipelines.target_codegen.rst  birdnet_tiny_forge.registries.rst  birdnet_tiny_forge.rst  birdnet_tiny_forge.targets.rst  conf.py  faqs.md  index.rst  modules.rst
src/birdnet_tiny_forge/: __init__.py  __main__.py  constants.py  pipeline_registry.py  settings.py
src/birdnet_tiny_forge/datasets/: __init__.py  audio_dataset.py  batched_parquet_dataset.py  keras_model_dataset.py  tar_dataset.py  tf_dataset.py  wav_dataset.py
src/birdnet_tiny_forge/features/: base.py
src/birdnet_tiny_forge/features/microspeech/: __init__.py  extractor.py  tflite_micro_frontend.py
src/birdnet_tiny_forge/hypersearch/: __init__.py  base.py  mobilenet_slimmed.py
src/birdnet_tiny_forge/models/: __init__.py  base.py  mobilenet_slimmed.py
src/birdnet_tiny_forge/pipelines/data_preprocessing/: __init__.py  nodes.py  pipeline.py
src/birdnet_tiny_forge/pipelines/feature_extraction/: __init__.py  nodes.py  pipeline.py
src/birdnet_tiny_forge/pipelines/model_training/: __init__.py  augmentation.py  nodes.py  pipeline.py
src/birdnet_tiny_forge/pipelines/target_codegen/: __init__.py  nodes.py  pipeline.py
src/birdnet_tiny_forge/registries/: __init__.py  base.py  feature_extraction.py  hypersearch.py  models.py  targets.py
src/birdnet_tiny_forge/scripts/: as_download.py  xc_download.py
src/birdnet_tiny_forge/targets/: __init__.py  base.py  korvo2_bird_logger.py
src/birdnet_tiny_forge/toolchains/: base.py  esp_idf_v5_2.py
tests/datasets/: test_batched_parquet_dataset.py  test_tar_dataset.py  test_wav_dataset.py
tests/pipelines/data_preprocessing/: test_data_preprocessing_pipeline.py
tests/registries/: test_registry.py
tests/targets/: test_target_base.py
